# world-map

./: .gitignore  .pre-commit-config.yaml  README.md  map.py  pyproject.toml  world_map.py
.github/workflows/: lint.yaml
